--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kotlinnoteapp">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinNoteApp">
         <activity
-            android:name=".notelistpage.NoteListActivity"
+            android:name="com.example.kotlinnoteapp.view.editnotepage.EditNoteActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.example.kotlinnoteapp.view.notelistpage.NoteListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
